[tool.poetry]
name = "ai-conversational"
version = "0.1.0"
description = "Travel Assistant"
authors = ["Accor Data Science Team"]
readme = "README.md"
packages = [{include = "app"}]

[[tool.poetry.source]]
name = "accor-index"
url = "https://nexus.softfactory-accor.net/repository/pypi-registry/simple"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.65"
fastapi = "^0.109.1"
langchain = "0.1.16"
langchain-aws = "^0.1.3"
loguru = "^0.7.2"
mlflow = "^2.12.2"
openai = "^1.26.0"              
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
python-dotenv = "1.0.0"
pytz = "^2023.4"
starlette = "^0.36.2"
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "3.5.0"
psutil = "*"
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launch_app = "app.routes:start"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 88
exclude = '.venv'
